==> fsouza/qmk_firmware/zsa_firmware/lib/chibios-contrib/os/hal/ports/MIMXRT1062/LLD/UARTv1/hal_serial_lld.c <==
#include "osal.h"
#include "hal.h"
#include "fsl_lpuart.h"
#define printf_init()
#define printf(...)
#define printf_debug_init()
#define printf_debug(...)

static void set_error(SerialDriver *sdp, uint32_t flags) {
  eventflags_t sts = 0;

  if (flags & kLPUART_RxOverrunFlag) {
    sts |= SD_OVERRUN_ERROR;
  }
  if (flags & kLPUART_ParityErrorFlag) {
    sts |= SD_PARITY_ERROR;
  }
  if (flags & kLPUART_FramingErrorFlag) {
    sts |= SD_FRAMING_ERROR;
  }
  if (flags & kLPUART_NoiseErrorFlag) {
    sts |= SD_NOISE_ERROR;
  }
  osalSysLockFromISR();
  chnAddFlagsI(sdp, sts);
  osalSysUnlockFromISR();
}

static void serve_error_interrupt(SerialDriver *sdp) {
  UART_w_TypeDef *u = &(sdp->uart);
  const uint32_t flags = LPUART_GetStatusFlags(u->lpuart_p);

  if (flags & kLPUART_IdleLineFlag) {
  }

  if (flags & (kLPUART_RxOverrunFlag | kLPUART_NoiseErrorFlag | kLPUART_FramingErrorFlag | kLPUART_ParityErrorFlag)) {
    set_error(sdp, flags);
  }
}

static void serve_interrupt(SerialDriver *sdp) {
  UART_w_TypeDef *u = &(sdp->uart);

  const uint32_t flags = LPUART_GetStatusFlags(u->lpuart_p);

  if (flags & kLPUART_RxDataRegFullFlag) {
    osalSysLockFromISR();
    if (iqIsEmptyI(&sdp->iqueue))
      chnAddFlagsI(sdp, CHN_INPUT_AVAILABLE);
    uint8_t b;
    LPUART_ReadBlocking(u->lpuart_p, &b, 1);
    if (iqPutI(&sdp->iqueue, b) < Q_OK)
      chnAddFlagsI(sdp, SD_OVERRUN_ERROR);
    osalSysUnlockFromISR();
  }

  if (flags & kLPUART_TxDataRegEmptyFlag) {
    msg_t b;

    osalSysLockFromISR();
    b = oqGetI(&sdp->oqueue);
    osalSysUnlockFromISR();

    if (b < Q_OK) {
      osalSysLockFromISR();
      chnAddFlagsI(sdp, CHN_OUTPUT_EMPTY);
      osalSysUnlockFromISR();
      // Disable Transfer Interrupt
      LPUART_DisableInterrupts(u->lpuart_p, kLPUART_TxDataRegEmptyInterruptEnable);
    } else {
      LPUART_WriteBlocking(u->lpuart_p, (const uint8_t*)&b, 1);
    }
  }

  serve_error_interrupt(sdp);
  LPUART_ClearStatusFlags(u->lpuart_p, flags);
}

static void preload(SerialDriver *sdp) {
  UART_w_TypeDef *u = &(sdp->uart);
  uint32_t flags = LPUART_GetStatusFlags(u->lpuart_p);

  if (flags & kLPUART_TxDataRegEmptyFlag) {
    msg_t b = oqGetI(&sdp->oqueue);
    if (b < Q_OK) {
      chnAddFlagsI(sdp, CHN_OUTPUT_EMPTY);
      return;
    }
    LPUART_WriteBlocking(u->lpuart_p, (const uint8_t*)&b, 1);
    LPUART_EnableInterrupts(u->lpuart_p, kLPUART_TxDataRegEmptyInterruptEnable);
  }
}

void sd_lld_init(void) {

#if MIMXRT1062_SERIAL_USE_UART0
  /* Driver initialization.*/
  sd_lld_init_driver(&SD1, LPUART1);
#endif /* MIMXRT1062_SERIAL_USE_UART0 */

#if MIMXRT1062_SERIAL_USE_UART1
  sd_lld_init_driver(&SD2, LPUART2);
#endif /* MIMXRT1062_SERIAL_USE_UART1 */

#if MIMXRT1062_SERIAL_USE_UART2
  sd_lld_init_driver(&SD3, LPUART3);
#endif /* MIMXRT1062_SERIAL_USE_UART2 */

#if MIMXRT1062_SERIAL_USE_UART3
  sd_lld_init_driver(&SD4, LPUART4);
#endif /* MIMXRT1062_SERIAL_USE_UART3 */

#if MIMXRT1062_SERIAL_USE_UART4
  sd_lld_init_driver(&SD5, LPUART5);
#endif /* MIMXRT1062_SERIAL_USE_UART4 */

#if MIMXRT1062_SERIAL_USE_UART5
  sd_lld_init_driver(&SD6, LPUART6);
#endif /* MIMXRT1062_SERIAL_USE_UART5 */
}

void sd_lld_start(SerialDriver *sdp, const SerialConfig *config) {

  if (config == NULL)
    config = &default_config;

  if (sdp->state == SD_STOP) {
    /* Enables the peripheral.*/

    lpuart_config_t uconfig;

    LPUART_GetDefaultConfig(&uconfig);
    uconfig.baudRate_Bps = config->sc_speed;
    uconfig.enableTx = true;
    uconfig.enableRx = true;

#if MIMXRT1062_SERIAL_USE_UART0
    if (sdp == &SD1) {
      LPUART_Init(LPUART1, &uconfig, UartSrcFreq());
      IOMUXC->SW_MUX_CTL_PAD[kIOMUXC_SW_MUX_CTL_PAD_GPIO_AD_B0_12] = 2; // Arduino pin 24
      IOMUXC->SW_MUX_CTL_PAD[kIOMUXC_SW_MUX_CTL_PAD_GPIO_AD_B0_13] = 2; // Arduino pin 25

      nvicEnableVector(LPUART1_IRQn, MIMXRT1062_SERIAL_UART0_PRIORITY);

      LPUART_EnableInterrupts(LPUART1, kLPUART_RxDataRegFullInterruptEnable);
    }
#endif /* MIMXRT1062_SERIAL_USE_UART0 */

#if MIMXRT1062_SERIAL_USE_UART1
    if (sdp == &SD2) {
      LPUART_Init(LPUART2, &uconfig, UartSrcFreq());
    }
#endif /* MIMXRT1062_SERIAL_USE_UART1 */

#if MIMXRT1062_SERIAL_USE_UART2
    if (sdp == &SD3) {
      LPUART_Init(LPUART3, &uconfig, UartSrcFreq());
      IOMUXC->SW_MUX_CTL_PAD[kIOMUXC_SW_MUX_CTL_PAD_GPIO_AD_B1_06] = 2; // Arduino pin 17
    }
#endif /* MIMXRT1062_SERIAL_USE_UART2 */

#if MIMXRT1062_SERIAL_USE_UART3
    if (sdp == &SD4) {
      LPUART_Init(LPUART4, &uconfig, UartSrcFreq());
    }
#endif /* MIMXRT1062_SERIAL_USE_UART3 */

#if MIMXRT1062_SERIAL_USE_UART4
    if (sdp == &SD5) {
      LPUART_Init(LPUART4, &uconfig, UartSrcFreq());
    }
#endif /* MIMXRT1062_SERIAL_USE_UART4 */

#if MIMXRT1062_SERIAL_USE_UART5
    if (sdp == &SD6) {
      LPUART_Init(LPUART5, &uconfig, UartSrcFreq());
    }
#endif /* MIMXRT1062_SERIAL_USE_UART5 */

  }
  /* Configures the peripheral.*/

}

void sd_lld_stop(SerialDriver *sdp) {

  if (sdp->state == SD_READY) {

#if MIMXRT1062_SERIAL_USE_UART0
    if (sdp == &SD1) {
      nvicDisableVector(LPUART1_IRQn);
      LPUART_Deinit(LPUART1);
    }
#endif

#if MIMXRT1062_SERIAL_USE_UART1
    if (sdp == &SD2) {
      LPUART_Deinit(LPUART2);
    }
#endif

#if MIMXRT1062_SERIAL_USE_UART2
    if (sdp == &SD3) {
      LPUART_Deinit(LPUART3);
    }
#endif

#if MIMXRT1062_SERIAL_USE_UART3
    if (sdp == &SD4) {
      LPUART_Deinit(LPUART4);
    }
#endif

#if MIMXRT1062_SERIAL_USE_UART4
    if (sdp == &SD5) {
      LPUART_Deinit(LPUART5);
    }
#endif

#if MIMXRT1062_SERIAL_USE_UART5
    if (sdp == &SD6) {
      LPUART_Deinit(LPUART6);
    }
#endif
  }
}
